style/st1_pet_shop.css
.container {
    display: flex;
    background: rgb(254, 254, 254);
}
.col1 {
    /* padding-left: 38px; */
    /* padding-right: 60px; */
    /* border-right: 1px solid rgba(192, 192, 192, 0.534); */
    padding-top: 100px;
    /* background: #fdfdfd; */
    display: flex;
    padding-bottom: 200px;
    /* z-index: -999; */
    /* align-items: center; */
}

.col2 {
    flex-grow: 1;
    /* background: rgb(253, 253, 253); */
}
/* Shop Banner */
.shop_banner {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    box-shadow: 4px 2px 8px rgba(68, 68, 68, 0.25);
    box-sizing: border-box;
    padding: 80px 100px;
    background: url('../img/banner/shop-banner.png');
    background-size: cover;
    background-clip: border-box;
    background-position: center;
    /* background: linear-gradient(90deg, #ffecec 0%, #ffeeee 68.84%, #ffe0e0 102.47%); */
}
.banner_gif img {
    height: 22.4rem;
    margin-top: -20px;

}
.banner_gif {
    display: flex;
    justify-content: center;
    align-items: center;
    min-width: 30rem; /* flex items shrink */
	width: 30rem;
	height: 30rem;
    background: rgb(255, 241, 241);
    border-radius: 50%;
}
.banner_message {
    /* max-width: 478.6px; */
    text-align: center;
}
.banner_message h3{
    color: rgb(255, 255, 255);
    font-size: 4.4rem;
    line-height: 1.2em;
    font-weight: 700;
    margin-bottom: 0;
}
.banner_message p {
    padding: 10px 0;
    margin-top: 3px;
    line-height: 1.5em;
    font-weight: 300;
    font-size: 16px;
}
.banner_btn {
    padding: 8px 20px;
    font-size: 1.6rem;
    display: table;
    margin-top: 30px;
    color: rgb(243, 243, 243);
    font-weight: 600;
    background: #FF218C;
    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.11);
    /* box-shadow: 0px 0px 3px rgba(37, 37, 37, 0.514); */
    transition: 0.1s;
}
.banner_btn:hover {  
    color: rgb(255, 255, 255);
    box-sizing: border-box;
    transform: translateY(-2px);
    /* box-shadow: -2px 3px 2px rgba(0, 0, 0, 0.267); */
    /* box-shadow: -5px 0px 10px #4350FF; */
}
.banner_btn:active {  
    color: rgb(255, 255, 255);
    /* box-shadow: -1px 2px 5px rgba(43, 43, 43, 0); */
        /* box-shadow: -5px 0px 10px #4350FF; */
}
/* Shop */
.shop_container {
    padding: 0 70px;
}
.shop_heading h3 {
    font-size: 3rem;
}
.showcase {
    margin-bottom: 60px;
    display: flex;
    flex-wrap: wrap;
}
.item {
    display: flex;
    flex-direction: column;
    width: 28%;
    min-width: 18px;
    max-width: 28rem;
    padding: 15px 0;
    text-align: center;
    background: white;
    border: 1px solid rgb(216, 216, 216);
    box-sizing: border-box;
    box-shadow: 0px 4px 7px rgba(190, 190, 190, 0.25);
    margin-right: 5%;
    margin-bottom: 35px;
    transition: 0.2s;
    /* width: 25%; */
    /* flex-shrink: 0; */
    /* flex-wrap: wrap; */
    /* flex-grow: 1; */
}
.item:hover {
    transform: scale(1.01);
}
.item_des {
    margin-top: 20px;
    padding: 15px 5px;
    border-bottom: 1px solid;
    border-top: 1px solid;
    background: rgba(245, 245, 245, 0.356);
    border-color: rgb(223, 223, 223);
    /* padding: 0 5px; */
}
.itm_img {
    /* width: 18rem; */
    /* width: 100%; */
    height: 14rem;
    object-fit:contain;
    align-self: center;
}
.quantity {
    box-sizing: border-box;
    display: flex;
    background: #e7ffd8bb;
    padding: 5px 8%;
    margin-top: 12px;
    justify-content: center;
    /* align-items: center; */
}
.qnt_change {
    margin-left: 10px;
}
.counter, .cart_counter {
    float: left;
    /* Firefox alignment fix */
    display: flex; 
    align-items: center;
    justify-content: center;
    /* Fix End */
    box-sizing: border-box;
    height: 18px;
    width: 18px;
    border: 0.1px solid #6e6e6e;
    background: #e3e3e3;
    color: #000000;
    font-size: 16px;
    margin: 0;
}
.counter:hover, .cart_counter:hover {
    background: #c9c9c9;
}
.counter:active, .cart_counter:active {
    background: #b0b0b0;
}
.cart_counter {
    height: 22px;
    width: 22px;
    font-size: 1.8rem;
}
.qnt_input, .cart_qnt_input {
    font-size: 12px; 
    float: left;
    border: 0.1px solid #333;
    border-left: 0px; 
    border-right: 0px; 
    padding: 0; 
    margin: 0; 
    text-align: center; 
    width: 18px !important; 
    height: 18px !important; 
    box-sizing: border-box;
}
.cart_qnt_input {
    font-size: 1.4rem;
    height: 22px !important;
    width: 22px !important;
}
.add {
    box-sizing: border-box;
    padding: 6px 35px;
    border: 0px solid #c7c7c7;
    background: #ff3131;
    color: #ffffff;
    font-size: 1.6rem;
    font-weight: 600;
    margin-top: 10px;
    transition: 0.2s;
}
.add:hover {
    background: #e20202;
}
.add:active {
    background: #af0000;
}
.shop_heading {
    margin: 40px 0;
    
}
#category {
    font-size: 1.3rem;
}
.shop_form_txt {
    box-sizing: border-box;
    width: 100%;
    border: 1px solid silver;
    padding: 7px;
}
textarea {
    resize: vertical;
    width: 100%;
    min-height: 100px;
    max-height: 150px;
    /* min-width: 130px; */
}
form {
    width: 23rem;
    padding: 10px 39px;
    padding-bottom: 50px;
    padding-left: 29px;
    background: #f5f9ff;
    /* margin: 30px 0; */
}
.req_star {
    color:red;
}
.form_container {
    border: 1px solid rgb(230, 230, 230);
    box-shadow: 0px 2px 4px rgba(3, 3, 3, 0.103);
    margin-left: 20px;
    height: max-content;
    position: sticky;
    left: 0;
    bottom: -80px;
    top: 20px;
    /* z-index: 999; */
}
.form_heading {
    background: white;
    color: #0472D9;
    padding: 19px 29px;
    border-bottom: 1px solid rgb(216, 216, 216);

}
.form_btn {
    background: #002bff;
    margin-right: 2px;
    margin-top: 30px;
    border: 2px solid #002bff;
    color: white;
    padding: 5px 10px;
    font-weight: 600;
    font-size: 1.4rem;
    transition: 0.2s;
}
.rest {
    color: #002bff;
    background: transparent;
}
/* ... */

